--- a/AulaTodo/Application/Views/Home/Editar.cshtml
+++ b/AulaTodo/Application/Views/Home/Editar.cshtml
@@ -10,10 +10,12 @@
     <div class="card-body">
         @using (Html.BeginForm("Editar", "Home", FormMethod.Post))
         {
-            <div class="form-group">
-                <label>Nome da Tarefa</label>
-                @Html.TextBoxFor(d => d.Tarefa, new { @class = "form-control" })
-            </div>
+        <div class="form-group">
+            <label>Nome da Tarefa</label>
+            @Html.TextBoxFor(d => d.Tarefa, new { @class = "form-control" })
+            <label>Observação</label>
+            @Html.TextAreaFor(d => d.Observacao, new { @class = "form-control" })
+        </div>
 
             <input type="submit" class="btn btn-success btn-sm" value="Salvar Tarefa" />
         }
